Structure 50/60, IO 9/15, Unit Tests 25/25. Total 84/100